meetup-bot/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: meetup-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: jollygoodhorsepower/meetup-bot:latest
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: meetup-bot
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80
