meetup-bot/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: meetup-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: meetup-bot
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
