meetup-bot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: meetup-bot
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - meetup-bot.dev
      secretName: ingress-tls
  rules:
    - host: meetup-bot.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meetup-bot-ingress
  namespace: meetup-bot
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/permanent-redirect: https://meetup-bot.dev$request_uri
spec:
  tls:
    - hosts:
      - www.meetup-bot.dev
      secretName: meetup-bot-ingress-tls
  rules:
    - host: www.meetup-bot.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
